# PHardwareITK_C

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
Docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
phardwareitk_c/: __init__.py
phardwareitk_c/limits/: __init__.py
phardwareitk_c/stddef/: __init__.py
phardwareitk_c/stdint/: __init__.py
phardwareitk_c/stdlib/: __init__.py
phardwareitk_c/string/: __init__.py
